--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="Refresh" content="1; url=//www.mesaurabh.tk" />
   </head>
   <body>
-    <p>Please follow <a href="//www.mesaurabh.tk/">this link</a>.</p>
+    <p>Please follow <a href="//www.mesaurabh.tk/">this link</a> OR,Wait till page is redirecting.</p>
   </body>
 </html>
