--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Refresh" content="1; url=//www.mesaurabh.tk" />
   </head>
   <body>
     <p>Please follow <a href="//www.mesaurabh.tk/">this link</a> OR,Wait till page is redirecting.</p>
