--- a/Ranway.html
+++ b/Ranway.html
@@ -24,9 +24,15 @@ body, html {height: 100%}
     RedSaurb
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Saurabh Kumar</h1>
+    <h1 class="w3-jumbo w3-animate-top">Ranway Village</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Tech Geek</p>
+    <p class="w3-large w3-center">Ranway is a Village in Keoti Ranway Block in Darbhanga District of Bihar State, India. It comes under Ranway Panchayat. It belongs to Darbhanga Division . It is located 13 KM towards North from District head quarters Darbhanga. 123 KM from State capital Patna
+
+Ranway is surrounded by Darbhanga Block towards South , Bisfi Block towards North , Singhwara Block towards west , Bahadurpur Block towards South .
+
+Darbhanga , Madhubani , Jhanjharpur , Samastipur are the near by Cities to Ranway.
+
+This Place is in the border of the Darbhanga District and Madhubani District. Madhubani District Bisfi is North towards this place.</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Go to Main Website <a href="https://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
