--- a/Ranway.html
+++ b/Ranway.html
@@ -21,10 +21,10 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    RedSaurb
+    Ranway Village
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Ranway Village</h1>
+    <h1 class="w3-jumbo w3-animate-top"></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">Ranway is a Village in Keoti Ranway Block in Darbhanga District of Bihar State, India. It comes under Ranway Panchayat. It belongs to Darbhanga Division . It is located 13 KM towards North from District head quarters Darbhanga. 123 KM from State capital Patna
 
@@ -35,7 +35,7 @@ Darbhanga , Madhubani , Jhanjharpur , Samastipur are the near by Cities to Ranwa
 This Place is in the border of the Darbhanga District and Madhubani District. Madhubani District Bisfi is North towards this place.</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Go to Main Website <a href="https://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
+   © 2019,All Rights Reserved. SART inc.
   </div>
 </div>
 
