--- a/Sart.html
+++ b/Sart.html
@@ -21,17 +21,17 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    SART
+    SART inc.
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">SART inc.</h1>
+    <h1 class="w3-jumbo w3-animate-top"></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Ease Your Life</p>
+    <p class="w3-large w3-center"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Go to Main Website <a href="https://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
+   Site is under construction,Go to <a href="https://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
   </div>
 </div>
-
+© 2019,All Rights Reserved. SART inc.
 </body>
 </html>
