--- a/Ranway.html
+++ b/Ranway.html
@@ -35,7 +35,8 @@ Darbhanga , Madhubani , Jhanjharpur , Samastipur are the near by Cities to Ranwa
 This Place is in the border of the Darbhanga District and Madhubani District. Madhubani District Bisfi is North towards this place.</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-  <a href="https://www.facebook.com/groups/RanwayVillage/">Facebook Group</a> © 2019,All Rights Reserved. SART inc.
+   © 2019,All Rights Reserved. <a href="https://RedSaurb.github.io/Start.html">SART inc.</a>
+<a href="https://www.facebook.com/groups/RanwayVillage/">Join Facebook Group</a>
   </div>
 </div>
 
