--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center">Tech Geek</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Go to Main Website <a href="https://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
+    Go to Main Website <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
   </div>
 </div>
 
