--- a/Sart.html
+++ b/Sart.html
@@ -29,7 +29,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-   Site is under construction,Go to <a href="https://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
+   Site is under construction,Go to <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
 © 2020,All Rights Reserved. SART inc.
   </div>
 </div>
