--- a/Ranway.html
+++ b/Ranway.html
@@ -34,7 +34,10 @@ Darbhanga, Madhubani, Jhanjharpur, Samastipur are the near by Cities to Ranway.
 
 This Place is in the border of the Darbhanga District and Madhubani District. Madhubani District Bisfi is North towards this place.</p>
   </div>
-<div>
+<div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top"></h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-medium w3-center">
 #RanwayVillage #KeotiRanway #DarbhangaDistrict #KeotiRanwayBlock
 </div>
   <div class="w3-display-bottomleft w3-padding-large">
