--- a/Ranway.html
+++ b/Ranway.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="icon" href="https://scontent.fpat3-1.fna.fbcdn.net/v/t1.0-9/fr/cp0/e15/q65/60547928_2206201509689995_7083932828240445440_o.jpg?_nc_cat=104&efg=eyJpIjoidCJ9&_nc_oc=AQkser_83a39ltmpB3sZgY_JdT-Y2Ukg0Aw_yjHG7l3Z8m5wyHM-DFe4UmoRBffxWplUd_z30MZqjdWz6FeVv1YW&_nc_ht=scontent.fpat3-1.fna&oh=92cfd1eecf756a9a7decaba28bfd5245&oe=5DEFA68C" type="image/gif" sizes="16x16">
-<title>Ranway Village | Official Website</title>
+<title>Welcome to The Ranway Village | Official Website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
