--- a/Ranway.html
+++ b/Ranway.html
@@ -34,7 +34,9 @@ Darbhanga, Madhubani, Jhanjharpur, Samastipur are the near by Cities to Ranway.
 
 This Place is in the border of the Darbhanga District and Madhubani District. Madhubani District Bisfi is North towards this place.</p>
 
-  <p2>#RanwayVillage #KeotiRanway #DarbhangaDistrict #KeotiRanwayBlock</p></div>
+  <div class="boxed">
+ 
+<p2>#RanwayVillage #KeotiRanway #DarbhangaDistrict #KeotiRanwayBlock</p></div></div>
 
   <div class="w3-display-bottomleft w3-padding-large">
    © 2020,All Rights Reserved. <a href="https://RedSaurb.github.io/Sart.html">SART inc.</a> 
