--- a/Ranway.html
+++ b/Ranway.html
@@ -36,7 +36,7 @@ This Place is in the border of the Darbhanga District and Madhubani District. Ma
 
   <div class="boxed">
  
-<p2>Ranway Village  Keoti Ranway  Darbhanga District  Keoti Ranway Block</p></div></div>
+<p2>Tags: Ranway Village, Keoti Ranway, Darbhanga District, Keoti Ranway Block</p></div></div>
 
   <div class="w3-display-bottomleft w3-padding-large">
    © 2020,All Rights Reserved. <a href="https://RedSaurb.github.io/Sart.html">SART inc.</a> 
