--- a/Ranway.html
+++ b/Ranway.html
@@ -26,7 +26,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top"></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-medium w3-center">Ranway is a Village in Keoti-Ranway Block in Darbhanga District of Bihar State, India. It belongs to Darbhanga Division. It is located 13 KM towards North from District head quarters Darbhanga. 123 KM from State capital Patna.
+    <p class="w3-medium w3-center"><bold>Ranway</bold> is a Village in Keoti-Ranway Block in Darbhanga District of Bihar State, India. It belongs to Darbhanga Division. It is located 13 KM towards North from District head quarters Darbhanga. 123 KM from State capital Patna.
 
 Ranway is surrounded by Darbhanga Block towards South, Bisfi Block towards North, Singhwara Block towards west, Bahadurpur Block towards South.
 
