--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRvCzbuMgLRkX6_iB20AB8NJRYW14Vg21xA3LfV41R8V9klzanf');
+  background-image: url('FB_IMG_1593758055952.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
