--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@ body, html {height: 100%}
   background-size: cover;
 }
 </style>
+  <style>
+a:link {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: dark blue;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: gray;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
