--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a:active {
     <p class="w3-large w3-center">Tech Geek</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-<b><a href="https://RedSaurb.github.io/indigo/">Connect With Me.</a></b><br>
+<b><a href="https://RedSaurb.github.io/indigo/" target="_blank">Connect With Me.</a></b><br>
     Go to Main Website <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
   </div>
 </div>
