--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a:link {
   text-decoration: none;
 }
 a:visited {
-  color: dark blue;
+  color:  blue;
   background-color: transparent;
   text-decoration: none;
 }
