--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-
+</style>
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
