--- a/Sart.html
+++ b/Sart.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('IMG_20190719_115911.jpg');
+  background-image: url('SARTlogo.png');
   min-height: 100%;
   background-position: center;
   background-size: cover;
