--- a/Sart.html
+++ b/Sart.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<link rel="icon" href="IMG_20190719_115911.jpg" type="image/gif" sizes="16x16">
+<link rel="icon" href="IconSART.png" type="image/gif" sizes="16x16">
 <title>SART inc. | Best Company For Web Development in 2020</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-   Site is under construction,Go to <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
+   Site is under construction, Go to <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
 © 2020,All Rights Reserved. SART inc.
   </div>
 </div>
