--- a/Sart.html
+++ b/Sart.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<link rel="icon" href="IconSART.png" type="image/gif" sizes="16x16">
+<link rel="icon" href="IconSART.png" type="png/gif" sizes="16x16">
 <title>SART inc. | Best Company For Web Development in 2020</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
