--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ body, html {height: 100%}
     Go to Main Website <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
   </div>
 </div>
-
+  
+<div class="w3-display-bottomright w3-padding-large">
+<b>© 2020,All Rights Reserved. <a href="http://www.SARTinc.tk/" target="_blank">SART inc.</a></b>
+     
+  </div>
+</div>
+  
 </body>
 </html>
