--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
+  <!-- background-image: url('FB_IMG_1593758055952.jpg'); -->
   background-image: url('FB_IMG_1593758055952.jpg');
   min-height: 100%;
   background-position: center;
@@ -31,7 +32,7 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
 <b><a href="https://RedSaurb.github.io/indigo/" target="_blank">Connect With Me.</a></b><br>
-    Go to Main Website <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a>
+   <!-- Go to Main Website <a href="http://www.MeSaurabh.tk/" target="_blank">MeSaurabh.tk</a> -->
   </div>
 </div>
   
