--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
   <!-- background-image: url('FB_IMG_1593758055952.jpg'); -->
-  background-image: url('FB_IMG_1593758055952.jpg');
+  background-image: url('Background.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
