--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {height: 100%}
 </div>
   
 <div class="w3-display-bottomright w3-padding-large">
-<b><a href="https://redsaurb.github.io/Sart.html" target="_blank">© SART inc.</a></b>
+<b>© <a href="https://redsaurb.github.io/Sart.html" target="_blank">SART inc.</a></b>
      
   </div>
 </div>
